testsuite/tests/typecheck/should_fail/UnliftedNewtypesUnassociatedFamilyFail.stderr

UnliftedNewtypesUnassociatedFamilyFail.hs:14:23: error:
    Module ‘GHC.Exts’ does not export ‘RuntimeRep(LiftedRep)’
